# image-host-api

./: .dockerignore  .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  Rocket.toml  config.toml  docker-compose.dev.yml  docker-compose.yml  prometheus.yml
.github/workflows/: ci.yml
benches/: image_processing.rs
migrations/: 001_initial.sql  001_initial_schema.sql  002_add_indexes_and_constraints.sql  002_seed_data.sql  003_add_image_metadata.sql  003_functions_and_triggers.sql  004_performance_optimizations.sql
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: backup.sh  create-api-key.sh  deploy.sh  dev.sh  init-db.sql  make-executable.sh  monitor-quotas.sh  purge-cdn-cache.sh  renew-ssl.sh  reset-quota.sh  restore.sh  setup-ssl.sh  test-upload.sh
site/: index.html
src/: config.rs  database.rs  error.rs  errors.rs  main.rs
src/auth/: api_key.rs  jwt.rs  mod.rs  password.rs
src/database/: mod.rs  queries.rs
src/handlers/: admin.rs  auth.rs  docs.rs  health.rs  images.rs  metrics.rs  mod.rs  upload.rs  user.rs
src/middleware/: auth.rs  cache.rs  metrics.rs  mod.rs  quota.rs  rate_limit.rs
src/models/: api_key.rs  image.rs  mod.rs  usage.rs  user.rs
src/services/: image_processor.rs  metrics.rs  mod.rs  quota_manager.rs  rate_limiter.rs  redis.rs  virus_scanner.rs
src/storage/: local.rs  mod.rs  s3.rs
src/utils/: crypto.rs  file.rs  mod.rs
systemd/: image-hosting.service
tests/: database_tests.rs  integration_tests.rs  test_helpers.rs
